--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "madsoft.com.form"
         minSdkVersion 17
         targetSdkVersion 25
-        versionCode 2
-        versionName "0.4"
+        versionCode 3
+        versionName "0.6.2 ALFA"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
