--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "madsoft.com.form"
         minSdkVersion 17
         targetSdkVersion 25
-        versionCode 5
-        versionName "0.7.1"
+        versionCode 8
+        versionName "0.8 Closed beta"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -26,6 +26,8 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile 'com.android.support:appcompat-v7:25.0.0'
+    compile 'com.github.chrisbanes:PhotoView:1.3.0'
     testCompile 'junit:junit:4.12'
 }
 
