--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="madsoft.com.form" >
+    package="madsoft.com.form">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -12,16 +12,21 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="MainActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="ThemeActivity"
-            android:parentActivityName=".MainActivity">
-        </activity>
+        <activity
+            android:name=".ThemeActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity android:name=".SettingsActivity"
+            android:parentActivityName=".MainActivity"
+            />
+        <activity android:name=".AboutActivity"
+            android:parentActivityName=".MainActivity"></activity>
     </application>
 
 </manifest>
