--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,8 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.github.chrisbanes:PhotoView:1.3.0'
+    compile 'org.sufficientlysecure:html-textview:3.5'
+   
     testCompile 'junit:junit:4.12'
 }
 
