--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 26
     buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "com.madsoft.form"
         minSdkVersion 17
-        targetSdkVersion 25
+        targetSdkVersion 21
         versionCode 14
         versionName "0.94 BETA"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -26,7 +26,7 @@ dependencies {
     })
     compile 'com.github.chrisbanes:PhotoView:1.3.0'
     compile 'org.sufficientlysecure:html-textview:3.5'
-   
+    compile 'com.klinkerapps:sliding-activity:1.5.2'
     testCompile 'junit:junit:4.12'
 }
 
