--- a/build.gradle
+++ b/build.gradle
@@ -15,12 +15,14 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven { url "https://maven.google.com" }
     }
 }
 
 allprojects {
     repositories {
         maven { url "https://jitpack.io" }
+
     }
 }
 
