--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile 'com.github.nirhart:parallaxscroll:1.0'
     compile 'com.github.chrisbanes:PhotoView:1.3.0'
     compile 'org.sufficientlysecure:html-textview:3.5'
     compile 'com.klinkerapps:sliding-activity:1.5.2'
