--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         <activity android:name=".SlidingThemeActivity"
             android:excludeFromRecents="true"
             android:taskAffinity=""
+            android:parentActivityName=".MainActivity"
             android:theme="@style/Theme.Sliding.DayNight"/>
     </application>
 
