--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,11 +2,12 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "25.0.2"
+    buildToolsVersion '28.0.3'
     defaultConfig {
+        vectorDrawables.useSupportLibrary = true
         applicationId "com.madsoft.form"
-        minSdkVersion 19
-        targetSdkVersion 21
+        minSdkVersion 15
+        targetSdkVersion 26
         versionCode 15
         versionName "0.95 BETA"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -20,16 +21,15 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.github.nirhart:parallaxscroll:1.0'
-    compile 'com.github.chrisbanes:PhotoView:1.3.0'
-    compile 'org.sufficientlysecure:html-textview:3.5'
-    compile 'com.klinkerapps:sliding-activity:1.5.2'
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
+    implementation 'com.github.nirhart:parallaxscroll:1.0'
+    implementation 'com.github.chrisbanes:PhotoView:1.3.0'
+    implementation 'org.sufficientlysecure:html-textview:3.5'
+    implementation 'com.klinkerapps:sliding-activity:1.5.2'
+    implementation 'com.android.support:recyclerview-v7:25.3.1'
 }
 
 
