--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,10 +6,10 @@ android {
     defaultConfig {
         vectorDrawables.useSupportLibrary = true
         applicationId "com.madsoft.form"
-        minSdkVersion 15
+        minSdkVersion 21
         targetSdkVersion 26
-        versionCode 15
-        versionName "0.95 BETA"
+        versionCode 21
+        versionName "0.97 BETA"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -29,7 +29,9 @@ dependencies {
     implementation 'com.github.chrisbanes:PhotoView:1.3.0'
     implementation 'org.sufficientlysecure:html-textview:3.5'
     implementation 'com.klinkerapps:sliding-activity:1.5.2'
-    implementation 'com.android.support:recyclerview-v7:25.3.1'
+    implementation 'com.android.support:recyclerview-v7:27.0.2'
+    implementation 'com.android.support:cardview-v7:27.0.2'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
 
 
