--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:launchMode="singleTop">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -32,8 +34,7 @@
         <activity android:name=".SlidingThemeActivity"
             android:excludeFromRecents="true"
             android:taskAffinity=""
-            android:parentActivityName=".MainActivity"
-            android:theme="@style/Theme.Sliding.DayNight"/>
+            android:parentActivityName=".MainActivity" />
     </application>
 
 </manifest>
