--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,6 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
-
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -23,7 +22,7 @@ allprojects {
 allprojects {
     repositories {
         maven { url "https://jitpack.io" }
-
+        google()
     }
 }
 
