--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
+        <activity android:name=".Activity.MainActivity"
             android:launchMode="singleTop">
 
             <intent-filter>
@@ -24,17 +24,17 @@
         </activity>
         <activity
             android:name=".ThemeActivity"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName=".Activity.MainActivity" />
         <activity
-            android:name=".SettingsActivity"
-            android:parentActivityName=".MainActivity" />
+            android:name=".Activity.SettingsActivity"
+            android:parentActivityName=".Activity.MainActivity" />
         <activity
-            android:name=".AboutActivity"
-            android:parentActivityName=".MainActivity" />
-        <activity android:name=".SlidingThemeActivity"
+            android:name=".Activity.AboutActivity"
+            android:parentActivityName=".Activity.MainActivity" />
+        <activity android:name=".Activity.SlidingThemeActivity"
             android:excludeFromRecents="true"
             android:taskAffinity=""
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName=".Activity.MainActivity" />
     </application>
 
 </manifest>
