--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,8 +40,8 @@
             <category android:name="android.intent.category.DEFAULT" />
 
             <data android:scheme="https"
-                android:host="rpspn.000webhostapp.com"
-                android:pathPrefix="/posts/" />
+                android:host="@string/deeplink_host"
+                android:pathPrefix="@string/deeplink_prefix" />
         </intent-filter>
         </activity>
     </application>
