--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,36 +13,35 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activity.MainActivity"
+        <activity
+            android:name=".Activity.MainActivity"
             android:launchMode="singleTop"
             android:theme="@style/AppTheme.Launcher">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-       <activity
+        <activity
             android:name=".Activity.SettingsActivity"
             android:parentActivityName=".Activity.MainActivity" />
         <activity
             android:name=".Activity.AboutActivity"
             android:parentActivityName=".Activity.MainActivity" />
-        <activity android:name=".Activity.SlidingThemeActivity"
+        <activity
+            android:name=".Activity.SlidingThemeActivity"
             android:excludeFromRecents="true"
             android:taskAffinity=""
             android:parentActivityName=".Activity.MainActivity">
             <intent-filter>
-            <action android:name="android.intent.action.VIEW" />
-
-            <category android:name="android.intent.category.BROWSABLE"/>
-            <category android:name="android.intent.category.DEFAULT" />
-
-            <data android:scheme="https"
-                android:host="@string/deeplink_host"
-                android:pathPrefix="@string/deeplink_prefix" />
-        </intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data
+                    android:scheme="https"
+                    android:host="@string/deeplink_host"
+                    android:pathPrefix="@string/deeplink_prefix" />
+            </intent-filter>
         </activity>
     </application>
 
