--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,9 @@ android {
 }
 
 dependencies {
+    def room_version = "2.2.5"
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
     implementation 'com.google.android.material:material:1.0.0'
     implementation group: 'commons-io', name: 'commons-io', version: '2.6'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
