--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ android {
 dependencies {
     def room_version = "2.2.5"
     implementation "androidx.room:room-runtime:$room_version"
+    implementation 'androidx.preference:preference:1.1.0-alpha05'
     annotationProcessor "androidx.room:room-compiler:$room_version"
     implementation 'com.google.android.material:material:1.1.0'
     implementation group: 'commons-io', name: 'commons-io', version: '2.6'
