--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,10 +5,10 @@ android {
     buildToolsVersion '28.0.3'
     defaultConfig {
         vectorDrawables.useSupportLibrary = true
-        applicationId "com.madsoft.form"
+        applicationId "info.logos.form"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 21
+        versionCode 136
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
