--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 *.iml
 .gradle
+*.apk
 /local.properties
 /.idea/workspace.xml
 /.idea/libraries
 .DS_Store
 /build
 /captures
+/app/release/
 .externalNativeBuild
